CAP-103 Fix text wrapping on long page names

--- a/themes/agent-portal-theme/src/css/partials/_navigation.scss
+++ b/themes/agent-portal-theme/src/css/partials/_navigation.scss
@@ -92,6 +92,10 @@
         text-decoration: none;
         opacity: 0.5;
 
+        & span {
+            white-space: nowrap;
+        }
+
         &:hover {
             text-decoration: none;
             color: #FFF;
